# misc

./: .gitignore  .gitmodules  README.md
adventofcode/four/: Cargo.toml
adventofcode/seven/: Cargo.toml
adventofcode/six/: Cargo.toml
adventofcode/two/: Cargo.toml
adventofcode2016/: README.md
adventofcode2016/eight/: Cargo.toml
adventofcode2016/fifteen/: Cargo.toml  input.txt  input2.txt
adventofcode2016/five/: Cargo.toml
adventofcode2016/nine/: Cargo.toml
adventofcode2016/one/: Cargo.toml
adventofcode2016/three/: Cargo.toml
adventofcode2017/: README.md
adventofcode2017/cutils/: utils.c  utils.h
adventofcode2017/cutils/tests/: CMakeLists.txt  input.txt
adventofcode2017/cutils/tests/src/: main.c
adventofcode2017/d02/: Cargo.toml  input.txt
adventofcode2017/d03/: Cargo.toml
adventofcode2017/d04/: Cargo.toml
adventofcode2017/d05/: Cargo.toml  input.txt
adventofcode2017/d07/cpp/: CMakeLists.txt
adventofcode2017/d07/cpp/src/: main.cpp
adventofcode2017/d08/: Cargo.toml
adventofcode2017/d09/: Cargo.toml  input.txt
adventofcode2017/d1/: Cargo.toml  input2.txt
adventofcode2017/d10/: Cargo.toml
adventofcode2017/d11/: Cargo.toml  input.txt
adventofcode2017/d12/: Cargo.toml
adventofcode2017/d13/: input.txt
adventofcode2017/d14/: .gitignore  Cargo.toml
adventofcode2017/d15/: Cargo.toml
adventofcode2017/d16/: Cargo.toml
adventofcode2017/d17/: Cargo.toml
adventofcode2017/d18/: Cargo.toml  input.txt
adventofcode2017/d19/: Cargo.toml
adventofcode2017/d2/: Cargo.toml
adventofcode2017/d20/: Cargo.toml  input.txt
adventofcode2017/d21/: Cargo.toml  input.txt
adventofcode2017/d22/: Cargo.toml  input.txt
adventofcode2017/d23/: Cargo.toml  input.txt
adventofcode2017/d24/: Cargo.toml  input.txt
adventofcode2017/d25/: Cargo.toml
adventofcode2017/d3/: Cargo.toml
adventofcode2017/d4/: Cargo.toml
adventofcode2017/d5/: Cargo.toml
adventofcode2017/d6/: Cargo.toml  input.txt
adventofcode2017/d7/: Cargo.toml  input.txt
adventofcode2017/d8/: Cargo.toml  input.txt
adventofcode2017/d9/: Cargo.toml
adventofcode2018/clojure/: deps.edn
adventofcode2018/rust/: Cargo.toml  README.md
adventofcode2019/: .env  get-input.sh
adventofcode2019/clojure/: deps.edn  new-day.sh
adventofcode2019/kotlin/: build.gradle.kts  settings.gradle.kts
adventofcode2019/lisp/: Dockerfile  Makefile  README.md  advent19.asd  deps.lisp  dev.lisp  docker.sh
adventofcode2020/: .env  get-input.sh
adventofcode2020/rust/: Cargo.toml
adventofcode2020/rust/src/: main.rs  utils.rs
adventofcode2020/rust/src/d01/: mod.rs
adventofcode2020/rust/src/d02/: mod.rs
adventofcode2020/rust/src/d03/: mod.rs
adventofcode2020/rust/src/d04/: mod.rs
adventofcode2020/rust/src/d05/: mod.rs
adventofcode2020/rust/src/d06/: mod.rs
adventofcode2020/rust/src/d07/: mod.rs
adventofcode2020/rust/src/d08/: mod.rs
adventofcode2020/rust/src/d09/: mod.rs
adventofcode2020/rust/src/d10/: mod.rs
adventofcode2020/rust/src/d11/: mod.rs
adventofcode2020/rust/src/d12/: mod.rs
adventofcode2020/rust/src/d13/: mod.rs
adventofcode2020/rust/src/d14/: mod.rs
adventofcode2020/rust/src/d15/: mod.rs
adventofcode2020/rust/src/d16/: mod.rs
adventofcode2020/rust/src/d17/: mod.rs
adventofcode2020/rust/src/d18/: mod.rs
adventofcode2021/lisp/: Dockerfile  Makefile  README.md  advent.asd  deps.lisp  dev.lisp  docker.sh
adventofcode2021/ocaml/: .env  README.md  advent.opam  dune-project
adventofcode2022/: .env  README.md  get-input.sh
adventofcode2023/: README.md  get-input.sh
adventofcode2023/rust/: Cargo.toml
cutils/: README.md  utils.c  utils.h
cutils/tests/: CMakeLists.txt
daily_programmer/encoding/: README.md
daily_programmer/first_non_repeating_char/: README.md
daily_programmer/horse_race/: README.md
daily_programmer/zigzag/: Cargo.toml
encoding/rust_encode/: Cargo.toml
faster_cli_tools/: README.md  bench.py  fetch_input.sh
faster_cli_tools/rust_v1/: Cargo.toml
faster_cli_tools/rust_v2/: Cargo.toml
fingercount/go_fingercount/: finger_test.go
fingercount/rust_fingercount/: Cargo.toml
first_non_repeating_char/rust/: Cargo.toml
horse_race/python/: horse.py
int_fib_representation/: README.md
int_fib_representation/rust_fibrep/: Cargo.toml
kaprekar/: README.md
kaprekar/rust_kaprekar/: Cargo.toml
reverse_factorial/: README.md
rust/: README.md
trolls/: README.md  project.clj
uuencoding/: README.md
(+358 files in other folders)
