[package]
name = "advent"
version = "0.1.0"
authors = ["James Kominick <james@kominick.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9"
regex = "1"
lazy_static = "1"
ureq = "1"
threadpool = "1"
num_cpus = "1"
